# effective-mobile-intern

./: .gitignore  README.md  pyproject.toml
second_block/first_question/: .env.example  Dockerfile  Makefile  pyproject.toml
second_block/first_question/app/: main.py
second_block/first_question/app/domain/aggregates/: buy.py
second_block/first_question/app/domain/entities/: base.py  book.py  buy_book.py  buy_step.py  city.py  client.py
second_block/first_question/app/domain/values/: author.py  book.py  buy_step.py  client.py
second_block/first_question/app/infrastructure/: container.py
second_block/first_question/app/infrastructure/adapters/alchemy/: orm.py
second_block/first_question/app/settings/: config.py
second_block/first_question/docker/: storages.yml
second_block/second_question/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
second_block/second_question/app/: main.py
second_block/second_question/app/application/api/trading_result/: __init__.py  handlers.py  schemas.py
second_block/second_question/app/application/consumers/trading_result/: handlers.py
second_block/second_question/app/application/jobs/: base.py  main.py
second_block/second_question/app/application/jobs/tasks/: redis_works.py
second_block/second_question/app/application/utils/: cache.py  scheduler.py
second_block/second_question/app/domain/: exceptions.py
second_block/second_question/app/domain/entities/: base.py  trading_result.py
second_block/second_question/app/domain/values/: trading_result.py
second_block/second_question/app/exceptions/: application.py  domain.py  infrastructure.py  logic.py
second_block/second_question/app/infrastructure/: exceptions.py
second_block/second_question/app/infrastructure/repositories/: base.py
second_block/second_question/app/infrastructure/services/: trading_result.py
second_block/second_question/app/infrastructure/uow/: base.py
second_block/second_question/app/logic/: bootstrap.py  container.py  exceptions.py  message_bus.py
second_block/second_question/app/logic/commands/: base.py  trading_result.py
second_block/second_question/app/logic/events/: base.py
second_block/second_question/app/settings/: config.py
second_block/second_question/docker/: app.yml  cache.yml  storages.yml
second_block/second_question/tests/unit_test/test_domain/: conftest.py
second_block/second_question/tests/unit_test/test_infrastructure/: conftest.py  utils.py
third_block/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
third_block/docker/: app.yml  entrypoint.sh  storages.yml
third_block/sitedogs/: manage.py
third_block/sitedogs/core/domain/entities/: base.py
third_block/sitedogs/core/infrastructure/repositories/: base.py
third_block/sitedogs/core/logic/commands/: base.py
third_block/sitedogs/dogs/: admin.py  apps.py
third_block/sitedogs/dogs/application/api/: urls.py
third_block/sitedogs/dogs/application/api/v1/: api.py
third_block/sitedogs/dogs/domain/entities/: base.py  breed.py  dogs.py
third_block/sitedogs/dogs/domain/values/: breed.py  dog.py  shared.py
third_block/sitedogs/dogs/exceptions/: domain.py  infrastructure.py
third_block/sitedogs/dogs/infrastructure/adapters/: base.py  dogs.py
third_block/sitedogs/dogs/infrastructure/repositories/: base.py
third_block/sitedogs/dogs/infrastructure/services/: breeds.py  dogs.py
third_block/sitedogs/dogs/logic/: container.py
third_block/sitedogs/dogs/logic/commands/: breeds.py  dogs.py
third_block/sitedogs/dogs/logic/use_cases/: breeds.py  dogs.py
third_block/sitedogs/dogs/migrations/: 0001_initial.py
third_block/sitedogs/sitedogs/: asgi.py  settings.py  urls.py  wsgi.py
(+50 files in other folders)
