[project]
name = "effective-mobile-intern"
version = "0.1.0"
description = "Solutions to problems during my internship"
authors = [
    { name = "c3equalz", email = "dan.kovalev2013@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["sqlalchemy (>=2.0.37,<3.0.0)", "pydantic (>=2.10.5,<3.0.0)", "pydantic-settings (>=2.7.1,<3.0.0)", "punq (>=0.7.0,<0.8.0)", "asyncpg (>=0.30.0,<0.31.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
ruff = "^0.9.1"
isort = "^5.13.2"

