[project]
name = "parser"
version = "0.1.0"
description = "парсер, который скачивает бюллетень по итогам торгов с сайта биржи"
authors = [
    {name = "c3equalz",email = "dan.kovalev2013@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "punq (>=0.7.0,<0.8.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "playwright (>=1.49.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
